followup for bug 376109, fix compile of mac carbon code. r=me, dead code.